[gd_scene load_steps=4 format=3 uid="uid://djkf0mee64e5m"]

[ext_resource type="Script" uid="uid://wdwwfpv1uf67" path="res://scripts/ui/main_menu/main_menu.gd" id="1_btdse"]

[sub_resource type="Gradient" id="Gradient_u8rxm"]
colors = PackedColorArray(0.52549, 0, 1, 1, 0.494118, 0.847059, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_btdse"]
gradient = SubResource("Gradient_u8rxm")
fill_from = Vector2(0, 1.65)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btdse")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_btdse")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "DeckTD"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
text = "Quit"

[node name="MapSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Map1" type="Button" parent="MarginContainer/VBoxContainer/MapSelection"]
layout_mode = 2
text = "Map1"

[node name="Map2" type="Button" parent="MarginContainer/VBoxContainer/MapSelection"]
layout_mode = 2
text = "Map2"

[node name="Map3" type="Button" parent="MarginContainer/VBoxContainer/MapSelection"]
layout_mode = 2
text = "Map3"
